[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "odoo-container-runner"

version = "0.1.0"

description = "A sample Python project"

readme = "README.md"

requires-python = ">=3.8"

license = {file = "LICENSE.txt"}

keywords = ["odoo", "container", "docker", "podman"]

authors = [
  {name = "Zachary Hanham", email = "z@zmhanham.com" }
]

maintainers = [
  {name = "Zachary Hanham", email = "z@zmhanham.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
odr = "odr.cli:main"

[project.urls]
"Homepage" = "https://github.com/zackattackz/odr"
"Source" = "https://github.com/zackattackz/odr"
